--- a/src/main/resources/templates/Registration.html
+++ b/src/main/resources/templates/Registration.html
@@ -25,6 +25,9 @@
     <span th:if="${#fields.hasErrors('password')}"
           th:errors="*{password}"></span><br />
 
+    First Name : <input type="text" th:field="*{firstName}" />
+    <span th:if="${#fields.hasErrors('firstName')}"
+          th:errors="*{firstName}"></span><br />
 
         <input type="radio" name="selectedRole" value="USER"/> USER<br/>
         <input type="radio" name="selectedRole" value="ADMIN"/> ADMIN<br/>
