--- a/src/main/resources/templates/myLoginPage.html
+++ b/src/main/resources/templates/myLoginPage.html
@@ -67,11 +67,13 @@
                         <input type="password" name="password" placeholder="password" class="form-control" />
                     </div>
 
+
+
                     <!-- Login/Submit Button -->
                     <div style="margin-top: 10px" class="form-group">
                         <div class="col-sm-6 controls">
                             <button type="submit" class="btn btn-success">Login</button>
-                            <a href="/registration">signup</a>
+                            <a href="/register">signup</a>
                         </div>
                     </div>
 
