--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Title</title>
-    <link rel="stylesheet" href="css/navcss.css">
-    <link rel="stylesheet" href="../static/navcss.css">
 
 
 </head>
@@ -13,28 +11,25 @@
 
 <nav id="topNav">
     <ul>
-        <li><a href="#">Nav 1</a></li>
-        <li><a href="#">Nav 2</a></li>
-        <li><a href="#">Nav 3</a></li>
-        <li><a href="#">Nav 4</a></li>
-        <li><a href="#">Nav 5</a></li>
+        <li><a href="/login">sign in</a></li>
+        <li><a href="/register">register</a></li>
+        <li><a href="/">home</a></li>
+        <li><a href="/pledgeitem">Pledge Item 4</a></li>
+        <li><a href="/displaypotluck">Display</a></li>
     </ul>
 </nav>
 
 
-<script src="/vendor/jquery/jquery.min.js"></script>
-<script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-<!-- Plugin JavaScript -->
-<script src="/vendor/jquery-easing/jquery.easing.min.js"></script>
+<h3>potluck</h3>
+<div th:each="item : ${items}">
+    <span th:inline="text">Item Name: [[${item.itemname}]]<br/></span>
+    <span th:inline="text">Serve Size: [[${item.servesize}]]<br /></span>
+    <span th:inline="text">Item Type: [[${item.itemtype}]]<br/></span>
 
-<!-- Contact form JavaScript -->
-<script src="/js/jqBootstrapValidation.js"></script>
-<script src="/js/contact_me.js"></script>
+    <br/><br/>
 
-<!-- Custom scripts for this template -->
-<script src="/js/agency.min.js"></script>
-</span>
 
+</div>
 </body>
 </html>
